#20 java8
- fix PMD/Codacy errors
- fix javadoc
- Reader and Writer are interfaces now
- use Generics in Accessor now (needs in AccessBuilder, Calulator,
ReaderImpl and WriterImpl too)
- add profile for JDK9 -> needs adding xml binding module for test
compile